--- a/src/tpl/partials/modals.html
+++ b/src/tpl/partials/modals.html
@@ -45,7 +45,62 @@
 </div>
 
 
+<div class="mobile__modal">
+  <div class="mobile__modal__inner">
+    <img src="@i/cross.svg" alt="cross" class="plan__modal__cross">
+    <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
 
+    <div class="mobile__modal__corpus">
+      <p class="apart__modal__title">План зданий</p>
+
+      <div class="mobile__modal__house">
+        <div class="mobile__modal__house__top">
+          <img src="@img/mob_map/left_apart.jpg" alt="courpus" class="mobile__modal__house__image">
+          <div class="mobile__modal__house__btn">Корпус Б</div>
+
+          <div class="mobile__modal__house__etaj">
+            <div class="mobile__modal__house__etaj__item b6_14">6-14 этаж</div>
+            <div class="mobile__modal__house__etaj__item b3_5">3-5 этаж</div>
+            <div class="mobile__modal__house__etaj__item b2">2 этаж</div>
+          </div>
+        </div>
+
+        <div class="mobile__modal__house__bottom"></div>
+      </div>
+
+      <div class="mobile__modal__house">
+        <div class="mobile__modal__house__top">
+          <img src="@img/mob_map/middle_apart.jpg" alt="courpus" class="mobile__modal__house__image">
+          <div class="mobile__modal__house__btn">Корпус В</div>
+          <div class="mobile__modal__house__etaj">
+            <div class="mobile__modal__house__etaj__item v6_10">6-10 этаж</div>
+            <div class="mobile__modal__house__etaj__item v3_5">3-5 этаж</div>
+            <div class="mobile__modal__house__etaj__item v2">2 этаж</div>
+          </div>
+        </div>
+
+        <div class="mobile__modal__house__bottom"></div>
+      </div>
+
+      <div class="mobile__modal__house">
+        <div class="mobile__modal__house__top">
+          <img src="@img/mob_map/right_apart.jpg" alt="courpus" class="mobile__modal__house__image">
+          <div class="mobile__modal__house__btn">Корпус А</div>
+
+          <div class="mobile__modal__house__etaj">
+            <div class="mobile__modal__house__etaj__item a15">15 этаж</div>
+            <div class="mobile__modal__house__etaj__item a14">14 этаж</div>
+            <div class="mobile__modal__house__etaj__item a9_13">9-13 этаж</div>
+            <div class="mobile__modal__house__etaj__item a3_8">3-8 этаж</div>
+          </div>
+        </div>
+
+        <div class="mobile__modal__house__bottom"></div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 <div class="plan__modal">
   <div class="plan__modal__inner">
