--- a/src/tpl/partials/plan.html
+++ b/src/tpl/partials/plan.html
@@ -14,6 +14,8 @@
         <div class="plan__block">
           <img src="@img/plan.png" alt="plan" class="plan__image">
 
+          <img src="@img/plan.png" alt="plan" class="plan__image__mobile">
+
           <!-- Корус Б -->
           <div class="plan__sec b6_14 l">
             <input name="info" type="hidden" value="Корпус Б <br>6-14 этаж <br>квартир 6">
