--- a/src/tpl/partials/modals.html
+++ b/src/tpl/partials/modals.html
@@ -47,7 +47,7 @@
 
 <div class="mobile__modal">
   <div class="mobile__modal__inner">
-    <img src="@i/cross.svg" alt="cross" class="plan__modal__cross">
+    <img src="@i/cross.svg" alt="cross" class="mobile__modal__cross">
     <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
 
     <div class="mobile__modal__corpus">
