--- a/src/tpl/partials/footer.html
+++ b/src/tpl/partials/footer.html
@@ -38,5 +38,7 @@
 			</div>
 		</div>
 	</div>
-<!--<iframe src="https://snazzymaps.com/embed/415488" width="100%" height="600px" style="border:none;"></iframe>-->
+	<div class="footer__bottom">
+
+	</div>
 </div>
