--- a/src/tpl/partials/form.html
+++ b/src/tpl/partials/form.html
@@ -14,6 +14,7 @@
 
         <form action="" class="form__form">
           <p class="form__minisubtitle">И получите консультацию специалиста</p>
+          <input type="text" class="header__form__input form__input" placeholder="Ваше имя">
           <input id="phone2" type="text" class="header__form__input form__input" placeholder="Номер телефона">
           <button class="btn form__btn">Отправить</button>
           <div class="form__check">
