--- a/src/tpl/partials/form.html
+++ b/src/tpl/partials/form.html
@@ -18,7 +18,7 @@
           <input id="phone2" type="text" class="header__form__input form__input" placeholder="Номер телефона">
           <button class="btn form__btn">Отправить</button>
           <div class="form__check">
-            <input id="form1" type="checkbox">
+            <input id="form1" type="checkbox" checked>
             <label for="form1" for="">Нажимая "Отправить" Вы соглашаетесь с политикой конфиденциальность</label>
           </div>
         </form>
