--- a/src/tpl/partials/modals.html
+++ b/src/tpl/partials/modals.html
@@ -1,4 +1,4 @@
-<div class="apart__modal">
+<div class="apart__modal modal">
   <div class="apart__modal__inner">
     <img src="@i/cross.svg" alt="cross" class="apart__modal__cross">
     <div class="apart__modal__etaj">Выбрать 2 этаж</div>
@@ -35,7 +35,7 @@
 
 
 
-<div class="map__modal">
+<div class="map__modal modal">
   <div class="map__modal__inner">
     <img src="@i/cross.svg" alt="cross" class="map__modal__cross">
     <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="mobile__modal">
+<div class="mobile__modal modal">
   <div class="mobile__modal__inner">
     <img src="@i/cross.svg" alt="cross" class="mobile__modal__cross">
     <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
@@ -102,7 +102,7 @@
   </div>
 </div>
 
-<div class="plan__modal">
+<div class="plan__modal modal">
   <div class="plan__modal__inner">
     <img src="@i/cross.svg" alt="cross" class="plan__modal__cross">
     <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
