--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -1,20 +1,10 @@
-<div class="etap">
+<div class="etap about">
   <div class="container">
-
-    <div class="main__title__block etap__title">
-      <img src="@i/mini_logo.png" alt="logo" class="main__title__img">
-      <div class="main__title__right">
-        <h3 class="main__title">Текущий</h3>
-        <p class="main__subtitle">Этап строительства</p>
-      </div>
-    </div>
-
     <div class="etap__inner">
 
-
       <div class="etap__left">
-        <h4 class="etap__title">Текущий</h4>
-        <p class="etap__subtitle">Этап строительства</p>
+        <h4 class="etap__title">Амина</h4>
+        <p class="etap__subtitle">Жилищный комплекс</p>
       </div>
 
       <div class="etap__slide">
@@ -35,13 +25,9 @@
         <div class="etap__way">
           <div class="etap__way__circle"></div>
           <div class="etap__way__line"></div>
-          <div class="etap__way__circle"></div>
         </div>
         <div class="etap__right__info">
-          <div class="etap__right__item">
-            <p class="etap__right__text">Начало<br> <span>4 квартал 2021 год</span></p>
-            <p class="etap__right__text">Сдача<br> <span>3 квартал 2023 год</span></p>
-          </div>
+          <p class="etap__right__info__m">ЖК «Амина» – это современный дизайн семи подъездного дома. Продуманные планировки представлены в широком выборе однокомнатных, двухкомнатных и трехкомнатных квартир общей площадью от 30 до 100 кв.м. На площадке расположено 3- 4 квартиры. Удобство проживания дополняется наличием собственного подземного паркинга.</p>
         </div>
       </div>
 
