--- a/src/tpl/partials/form.html
+++ b/src/tpl/partials/form.html
@@ -8,12 +8,17 @@
           <div class="form__title__right">
             <h3 class="form__title">Оставьте</h3>
             <p class="form__subtitle">Заявку</p>
+
+            <h3 class="form__title main">Хотите подобную</h3>
+            <p class="form__subtitle main">Квартиру?</p>
           </div>
         </div>
 
 
         <form action="" class="form__form">
           <p class="form__minisubtitle">И получите консультацию специалиста</p>
+          <p class="form__minisubtitle main">У нас есть предложение в жк title</p>
+
           <input type="text" class="header__form__input form__input" placeholder="Ваше имя">
           <input id="phone2" type="text" class="header__form__input form__input" placeholder="Номер телефона">
           <button class="btn form__btn">Отправить</button>
@@ -25,6 +30,7 @@
       </div>
 
       <img src="@img/man.png" alt="man" class="form__man">
+      <img src="@img/woman.png" alt="man" class="form__man form__woman">
 
     </div>
   </div>
