--- a/src/tpl/partials/header_m.html
+++ b/src/tpl/partials/header_m.html
@@ -39,7 +39,7 @@
 
 		<div class="header__middle">
 			<div class="header__tilteblock">
-				<h1 class="header__maintitle">Жк parklane</h1>
+				<h1 class="header__maintitle">Жк Амина</h1>
 				<p class="header__main__m__subtitle">Недвижимость премиум-класса, в котором качество и статус говорят за себя</p>
 			</div>
 		</div>
