--- a/src/tpl/partials/about.html
+++ b/src/tpl/partials/about.html
@@ -1,5 +1,14 @@
 <div class="etap about">
   <div class="container">
+
+    <div class="main__title__block etap__title">
+      <img src="@i/mini_logo.png" alt="logo" class="main__title__img">
+      <div class="main__title__right">
+        <h3 class="main__title">Амина</h3>
+        <p class="main__subtitle">Жилищный комплекс</p>
+      </div>
+    </div>
+
     <div class="etap__inner">
 
       <div class="etap__left">
