--- a/src/tpl/partials/benef_m.html
+++ b/src/tpl/partials/benef_m.html
@@ -1,35 +1,52 @@
-<div class="benef">
+<div class="benef__m">
   <div class="container">
-    <div class="benef__inner">
+    <div class="benef__m__inner">
 
       <div class="main__title__block">
         <img src="@i/mini_logo.png" alt="logo" class="main__title__img">
         <div class="main__title__right">
           <h3 class="main__title">Преимущества</h3>
-          <p class="main__subtitle">Жк Parklane</p>
+          <p class="main__subtitle">Жк TITLE</p>
         </div>
       </div>
 
-      <div class="benef__block">
-        <div class="benef__item">
-          <img src="@i/udob.svg" alt="benef" class="benef__img">
-          <p class="benef__text">Удобное<br>месторасположение</p>
+      <div class="benef__m__block">
+        <div class="benef__m__block__item benef__m__block__top">
+          <div class="benef__m__item">
+            <img src="@i/ozel.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Закрытй <br>двор</p>
+          </div>
+          <div class="benef__m__item">
+            <img src="@i/okna.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Панорамные <br>окна</p>
+          </div>
+          <div class="benef__m__item">
+            <img src="@i/potolki.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Высота потолков <br>2.7-3.6 м.</p>
+          </div>
+          <div class="benef__m__item">
+            <img src="@i/plochad.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Площадь от 30 <br>до 100 кв.м.</p>
+          </div>
         </div>
-        <div class="benef__item">
-          <img src="@i/bez.svg" alt="benef" class="benef__img">
-          <p class="benef__text">Высокий уровень<br>безопасности</p>
-        </div>
-        <div class="benef__item">
-          <img src="@i/komfort.svg" alt="benef" class="benef__img">
-          <p class="benef__text">Комфортная<br>инфраструктура</p>
-        </div>
-        <div class="benef__item">
-          <img src="@i/ozelen.svg" alt="benef" class="benef__img">
-          <p class="benef__text">Озеленение<br>территории</p>
+
+        <div class="benef__m__block__item benef__m__block__bot">
+          <div class="benef__m__item">
+            <img src="@i/lift.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Бесшумные<br>лифты</p>
+          </div>
+          <div class="benef__m__item">
+            <img src="@i/parking.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Подземный<br>паркинг</p>
+          </div>
+          <div class="benef__m__item">
+            <img src="@i/otdelka.svg" alt="icon" class="benef__m__img">
+            <p class="benef__m__text">Улучшенная<br>отделка</p>
+          </div>
         </div>
       </div>
 
-      <button class="btn benef__btn">Показать расположение</button>
+      <a href="" class="btn form__btn ben__m__btn">Скачать буклеты</a>
 
     </div>
   </div>
