--- a/src/tpl/partials/object.html
+++ b/src/tpl/partials/object.html
@@ -47,6 +47,40 @@
             </div>
           </div>
 
+          <div class="object__slide">
+            <div class="object__left">
+              <a href="" class="object__image__link">
+                <img src="@img/object1.jpg" alt="image" class="object__image">
+              </a>
+              <div class="object__left__bottom">
+                <p class="object__info__item">4 корпуса</p>
+                <div class="object__info__item__line"></div>
+                <p class="object__info__item">озеленение</p>
+                <div class="object__info__item__line"></div>
+                <p class="object__info__item">зоны отдыха</p>
+              </div>
+            </div>
+            <div class="object__right">
+              <p class="object__title">Parklane</p>
+              <p class="object__subtitle">Жилищный комплекс</p>
+
+
+              <div class="object__right__block">
+                <div class="etap__way">
+                  <div class="etap__way__circle"></div>
+                  <div class="etap__way__line"></div>
+                </div>
+                <div class="object__right__info">
+                  <div class="object__right__info__item"><span>Этап строительства:</span> в процессе</div>
+                  <div class="object__right__info__item"><span>Местоположение:</span> площадь независимости Нур-Султан</div>
+                  <a href="" class="object__link">Подробнее</a>
+                </div>
+              </div>
+
+              <a href="" class="object__btn">></a>
+            </div>
+          </div>
+
         </div>
       </div>
 
