--- a/src/tpl/partials/geo.html
+++ b/src/tpl/partials/geo.html
@@ -4,7 +4,7 @@
       <div class="main__title__block">
         <img src="@i/mini_logo.png" alt="logo" class="main__title__img">
         <div class="main__title__right">
-          <h3 class="main__title">Местоположение</h3>
+          <h3 class="main__title">Местоположение <span>Амина</span></h3>
         </div>
       </div>
 
@@ -27,8 +27,3 @@
   </div>
 </div>
 
-<style>
-  .geo .main__title::after {
-    content: 'Амина' !important;
-  }
-</style>
