--- a/src/tpl/partials/param.html
+++ b/src/tpl/partials/param.html
@@ -15,12 +15,12 @@
           <div data-param="Количество комнат" class="param__select">Кол-во комнат</div>
           <div class="param__menu">
             <div data-param="nothing" class="param__item">Не важно</div>
-            <div data-param="1-комнатная" class="param__item">1-комнатная</div>
-            <div data-param="2-комнатная" class="param__item">2-комнатная</div>
-            <div data-param="3-комнатная" class="param__item">3-комнатная</div>
-            <div data-param="4-комнатная" class="param__item">4-комнатная</div>
-            <div data-param="5-комнатная" class="param__item">5-комнатная</div>
-            <div data-param="6-комнатная" class="param__item">6-комнатная</div>
+            <div data-param="1-комнатные" class="param__item">1-комнатные</div>
+            <div data-param="2-комнатные" class="param__item">2-комнатные</div>
+            <div data-param="3-комнатные" class="param__item">3-комнатные</div>
+            <div data-param="4-комнатные" class="param__item">4-комнатные</div>
+            <div data-param="5-комнатные" class="param__item">5-комнатные</div>
+            <div data-param="6-комнатные" class="param__item">6-комнатные</div>
           </div>
         </div>
         <div class="2 param__select__out">
