--- a/src/tpl/partials/header_s.html
+++ b/src/tpl/partials/header_s.html
@@ -41,7 +41,7 @@
 
     <div class="param__block">
       <div class="1 param__select__out">
-        <div data-param="none" class="param__select">Кол-во комнат</div>
+        <div data-param="nothing" class="param__select">Кол-во комнат</div>
         <div class="param__menu">
           <div data-param="nothing" class="param__item">Не важно</div>
           <div data-param="1-комнатные" class="param__item">1-комнатные</div>
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="2 param__select__out">
-        <div data-param="none" class="param__select">Этаж</div>
+        <div data-param="nothing" class="param__select">Этаж</div>
         <div class="param__menu">
           <div data-param="nothing" class="param__item">Не важно</div>
           <div data-param="1 этаж" class="param__item">1 этаж</div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="3 param__select__out">
-        <div data-param="none" class="param__select">Здание</div>
+        <div data-param="nothing" class="param__select">Здание</div>
         <div class="param__menu">
           <div data-param="nothing" class="param__item">Не важно</div>
           <div data-param="Parklane" class="param__item">Parklane</div>
