--- a/src/tpl/partials/param.html
+++ b/src/tpl/partials/param.html
@@ -57,7 +57,7 @@
         </div>
       </div>
 
-      <div class="btn param__btn">Посмотреть квартиры</div>
+      <a href="http://localhost:2003/param.html" class="btn param__btn">Посмотреть квартиры</a>
 
     </div>
   </div>
