--- a/src/tpl/partials/search.html
+++ b/src/tpl/partials/search.html
@@ -1,6 +1,7 @@
 <div class="search">
   <div class="container">
     <div class="search__inner">
+      <p class="search__nothig">Квартиры не найдены</p>
       <div class="search__block">
 
         <div class="search__item">
