--- a/src/tpl/partials/header.html
+++ b/src/tpl/partials/header.html
@@ -27,11 +27,15 @@
 				</div>
 			</div>
 			<div class="header__social">
+
 				<a href="" class="header__soc__link">
 					<img src="@i/telegram.svg" alt="telega" class="header__soc__img">
 				</a>
 				<a href="" class="header__soc__link what">
 					<img src="@i/whatsapp.svg" alt="telega" class="header__soc__img">
+				</a>
+				<a href="" class="header__soc__link">
+					<img src="@i/face.svg" alt="telega" class="header__soc__img">
 				</a>
 				<a href="" class="header__num__link">+7(7172)613-000</a>
 			</div>
@@ -39,7 +43,7 @@
 
 		<div class="header__middle">
 			<div class="header__tilteblock">
-				<h1 class="header__maintitle">Жк parklane</h1>
+				<h1 class="header__maintitle">Жк Golden Residence</h1>
 				<p class="header__mainsubtitle">для жизни</p>
 			</div>
 		</div>
