--- a/src/tpl/partials/modals.html
+++ b/src/tpl/partials/modals.html
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-
+<input class="input__sales" type="hidden" value="room1_b6_14room4_b6_14room2_b3_5room2_b2room2_v6_10room2_v3_5room2_v2room4_a9_13room3_a3_8room1_a15">
 
 <div class="map__modal modal">
   <div class="map__modal__inner">
