--- a/src/tpl/partials/object.html
+++ b/src/tpl/partials/object.html
@@ -14,6 +14,7 @@
         <div class="object__slider">
 
           <div class="object__slide">
+            <a class="object__slide__link" href=""></a>
             <div class="object__left">
               <a href="" class="object__image__link">
                 <img src="@img/object1.jpg" alt="image" class="object__image">
@@ -39,11 +40,11 @@
                 <div class="object__right__info">
                   <div class="object__right__info__item"><span>Этап строительства:</span> в процессе</div>
                   <div class="object__right__info__item"><span>Местоположение:</span> площадь независимости Нур-Султан</div>
-                  <a href="" class="object__link">Подробнее</a>
+                  <a href="   " class="object__link">Подробнее</a>
                 </div>
               </div>
 
-              <a href="" class="object__btn">></a>
+              <!-- <a href="" class="object__btn">></a> -->
             </div>
           </div>
 
@@ -77,7 +78,7 @@
                 </div>
               </div>
 
-              <a href="" class="object__btn">></a>
+              <!-- <a href="" class="object__btn">></a> -->
             </div>
           </div>
 
