--- a/src/tpl/partials/geo.html
+++ b/src/tpl/partials/geo.html
@@ -22,6 +22,8 @@
         </div>
       </div>
 
+      <img src="/assets/img/photo/map_geo.jpg" alt="maps" class="geo__image">
+
 
     </div>
   </div>
