--- a/src/tpl/partials/modals.html
+++ b/src/tpl/partials/modals.html
@@ -104,15 +104,15 @@
 
 <div class="plan__modal modal">
   <div class="plan__modal__inner">
-    <img src="@i/cross.svg" alt="cross" class="plan__modal__cross">
-    <img src="@i/mini_logo.png" alt="logo" class="apart__modal__logo">
+    <img src="assets/img/icons/cross.svg" alt="cross" class="plan__modal__cross">
+    <img src="assets/img/icons/mini_logo.png" alt="logo" class="apart__modal__logo">
     <p class="apart__modal__title">План этажа</p>
     <p class="plan__modal__subtitle"></p>
     <div class="plan__modal__blocks">
 
       <!-- Корпус Б -->
       <div class="plan__modal__item b6_14">
-        <img src="@img/et/b6_14.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/b6_14.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_b6_14">
           <input name="info" type="hidden" value="Спальня <span>18.91м²</span>">
@@ -216,7 +216,7 @@
       </div>
 
       <div class="plan__modal__item b3_5">
-        <img src="@img/et/b3_5.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/b3_5.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_b3_5">
           <input name="info" type="hidden" value="Спальня <span>18.91м²</span>">
@@ -319,7 +319,7 @@
       </div>
 
       <div class="plan__modal__item b2">
-        <img src="@img/et/b2.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/b2.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_b2">
           <input name="info" type="hidden" value="Спальня <span>19.71м²</span>">
@@ -439,7 +439,7 @@
 
       <!-- Корпус В -->
       <div class="plan__modal__item v6_10">
-        <img src="@img/et/v6_10.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/v6_10.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_v6_10">
           <input name="info" type="hidden" value="Спальня <span>15.97м²</span>">
@@ -514,7 +514,7 @@
       </div>
 
       <div class="plan__modal__item v3_5">
-        <img src="@img/et/v3_5.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/v3_5.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_v3_5">
           <input name="info" type="hidden" value="Спальня <span>15.97м²</span>">
@@ -589,7 +589,7 @@
       </div>
 
       <div class="plan__modal__item v2">
-        <img src="@img/et/v2.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/v2.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_v2">
           <input name="info" type="hidden" value="Спальня <span>14.38м²</span>">
@@ -676,7 +676,7 @@
 
       <!-- Корпус А -->
       <div class="plan__modal__item a15">
-        <img src="@img/et/a15.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/a15.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_a15">
           <input name="info" type="hidden" value="Спальня <span>27.13м²</span>">
@@ -729,7 +729,7 @@
       </div>
 
       <div class="plan__modal__item a14">
-        <img src="@img/et/a14.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/a14.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_a14">
           <input name="info" type="hidden" value="Кабинет <span>27.13м²</span>">
@@ -781,7 +781,7 @@
       </div>
 
       <div class="plan__modal__item a9_13">
-        <img src="@img/et/a9_13.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/a9_13.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_a9_13">
           <input name="info" type="hidden" value="Гостиная <span>21.81м²</span>">
@@ -915,7 +915,7 @@
       </div>
 
       <div class="plan__modal__item a3_8">
-        <img src="@img/et/a3_8.jpg" alt="etaj" class="plan__modal__item__image">
+        <img src="assets/img/photo/et/a3_8.jpg" alt="etaj" class="plan__modal__item__image">
 
         <div class="room room1_a3_8">
           <input name="info" type="hidden" value="Гостиная <span>21.82м²</span>">
