--- a/src/tpl/partials/plan.html
+++ b/src/tpl/partials/plan.html
@@ -17,48 +17,148 @@
           <img src="@img/plan.png" alt="plan" class="plan__image__mobile">
 
           <!-- Корус Б -->
-          <div class="plan__sec b6_14 l">
-            <input name="info" type="hidden" value="Корпус Б <br>6-14 этаж <br>квартир 6">
+          <div class="plan__sec b14 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>14 этаж, <br>квартир - 6">
           </div>
 
-          <div class="plan__sec b3_5 l">
-            <input name="info" type="hidden" value="Корпус Б <br>3-5 этаж<br>квартир 6">
+          <div class="plan__sec b13 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>13 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b12 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>12 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b11 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>11 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b10 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>10 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b9 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>9 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b8 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>8 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b7 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>7 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b6 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>6 этаж, <br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b5 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>5 этаж,<br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b4 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>4 этаж,<br>квартир - 6">
+          </div>
+
+          <div class="plan__sec b3 l">
+            <input name="info" type="hidden" value="Корпус Б, <br>3 этаж,<br>квартир - 6">
           </div>
 
           <div class="plan__sec b2 l">
-            <input name="info" type="hidden" value="Корпус Б <br>2 этаж <br>квартир 6 <br><span>(Пентхаус)<span>">
+            <input name="info" type="hidden" value="Корпус Б, <br>2 этаж, <br>квартир - 6 <br><span>(Пентхаус)<span>">
           </div>
 
 
           <!-- Корус В -->
-          <div class="plan__sec v6_10 m">
-            <input name="info" type="hidden" value="Корпус В <br>6-10 этаж <br>квартир 4">
+          <div class="plan__sec v10 m">
+            <input name="info" type="hidden" value="Корпус В, <br>10 этаж, <br>квартир - 4">
           </div>
 
-          <div class="plan__sec v3_5 m">
-            <input name="info" type="hidden" value="Корпус В <br>3-5 этаж <br>квартир 4">
+          <div class="plan__sec v9 m">
+            <input name="info" type="hidden" value="Корпус В, <br>9 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v8 m">
+            <input name="info" type="hidden" value="Корпус В, <br>8 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v7 m">
+            <input name="info" type="hidden" value="Корпус В, <br>7 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v6 m">
+            <input name="info" type="hidden" value="Корпус В, <br>6 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v5 m">
+            <input name="info" type="hidden" value="Корпус В, <br>5 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v4 m">
+            <input name="info" type="hidden" value="Корпус В, <br>4 этаж, <br>квартир - 4">
+          </div>
+
+          <div class="plan__sec v3 m">
+            <input name="info" type="hidden" value="Корпус В, <br>3 этаж, <br>квартир - 4">
           </div>
 
           <div class="plan__sec v2 m">
-            <input name="info" type="hidden" value="Корпус В <br>2 этаж <br>квартир 4<br> <span>(Пентхаус)<span>">
+            <input name="info" type="hidden" value="Корпус В, <br>2 этаж, <br>квартир - 4<br> <span>(Пентхаус)<span>">
           </div>
 
 
           <!-- Корус А -->
           <div class="plan__sec a15 r">
-            <input name="info" type="hidden" value="Корпус А <br>15 этаж <br>квартир 2">
+            <input name="info" type="hidden" value="Корпус А, <br>15 этаж, <br>квартир - 2">
           </div>
 
           <div class="plan__sec a14 r">
-            <input name="info" type="hidden" value="Корпус А <br>14 этаж <br>квартир 2">
+            <input name="info" type="hidden" value="Корпус А, <br>14 этаж, <br>квартир - 2">
           </div>
 
-          <div class="plan__sec a9_13 r">
-            <input name="info" type="hidden" value="Корпус А <br>9-13 этаж <br>квартир 9">
+          <div class="plan__sec a13 r">
+            <input name="info" type="hidden" value="Корпус А, <br>13 этаж, <br>квартир - 9">
           </div>
 
-          <div class="plan__sec a3_8 r">
-            <input name="info" type="hidden" value="Корпус А <br>3-8 этаж <br>квартир 9">
+          <div class="plan__sec a12 r">
+            <input name="info" type="hidden" value="Корпус А, <br>12 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a11 r">
+            <input name="info" type="hidden" value="Корпус А, <br>11 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a10 r">
+            <input name="info" type="hidden" value="Корпус А, <br>10 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a9 r">
+            <input name="info" type="hidden" value="Корпус А, <br>9 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a8 r">
+            <input name="info" type="hidden" value="Корпус А, <br>8 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a7 r">
+            <input name="info" type="hidden" value="Корпус А, <br>7 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a6 r">
+            <input name="info" type="hidden" value="Корпус А, <br>6 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a5 r">
+            <input name="info" type="hidden" value="Корпус А, <br>5 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a4 r">
+            <input name="info" type="hidden" value="Корпус А, <br>4 этаж, <br>квартир - 9">
+          </div>
+
+          <div class="plan__sec a3 r">
+            <input name="info" type="hidden" value="Корпус А, <br>3 этаж, <br>квартир - 9">
           </div>
 
 
